--- a/.github/workflows/build-and-upload-binaries.yml
+++ b/.github/workflows/build-and-upload-binaries.yml
@@ -19,6 +19,12 @@ jobs:
         with:
           go-version: '1.21'  # Set the Go version you're using
 
+      # Install necessary build tools for cgo
+      - name: Install build tools for cgo
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y gcc g++ libc6-dev
+
       # Get the version from the tag
       - name: Get version from tag
         id: get_version
