--- a/.github/workflows/build-and-upload-binaries.yml
+++ b/.github/workflows/build-and-upload-binaries.yml
@@ -24,6 +24,7 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y gcc g++ libc6-dev
+          sudo apt-get install gcc-multilib
 
       # Get the version from the tag
       - name: Get version from tag
