--- a/.github/workflows/build-and-upload-binaries.yml
+++ b/.github/workflows/build-and-upload-binaries.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v3
         with:
-          go-version: '1.21'  # Set the Go version you're using
+          go-version: '1.23'
 
       # Install necessary build tools for cgo
       - name: Install build tools for cgo
@@ -37,6 +37,7 @@ jobs:
         run: |
           REPO_NAME=$(echo "${GITHUB_REPOSITORY}" | cut -d'/' -f2)
           echo "REPO_NAME=${REPO_NAME}" >> $GITHUB_ENV
+          echo "Repository name: ${REPO_NAME}"
 
       # Build binaries only if tag is new
       - name: Build binaries
